--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
         </div>
       </div>
     </div>
+    <br /> 
+    <div> 
+      <a href=" https://github.com/ivanniesala/weatherapp-version1">Open-source code</a> by Ivannie S.
+    </div>
    <script src="src/index.js"></script>
   </body>
 </html>
