--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
     <br /> 
     <div> 
-      <a href=" https://github.com/ivanniesala/weatherapp-version1">Open-source code</a> by Ivannie S.
+      <a href=" https://github.com/ivanniesala/weatherapp-version1" target="_blank"></a>>Open-source code</a> by Ivannie S.
     </div>
    <script src="src/index.js"></script>
   </body>
